# libbarrett

./: .bash_aliases  .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  README.txt  cmake_install.cmake  install_manifest.txt  package.xml
cmake/: barrett-config.cmake
cmake/debian/: barrett-config.cmake
cmake/modules/: ClangFormat.cmake  FindGSL.cmake  FindXenomai.cmake
config/: .autotension.conf.swp
examples/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ex01_dump_encoders.cpp  ex03_simple_move.cpp  ex08_teach_and_play.cpp  ex10_haptics.cpp  ex10_haptics.h  ex11_master_master.h
include/barrett/: config.h  config.h.rosario  exception.h  log.h  logger.h  math.h  os.h  standard_main_function.h  systems.h  units.h
include/barrett/bus/: bus_manager.h  can_socket.h
include/barrett/cdlbt/: calgrav.h  dynamics.h  gsl.h  interp.h  kinematics.h  profile.h  spline.h
include/barrett/detail/: os.h  (+5 more)
programs/: CMakeLists.txt  Makefile  autotension.cpp  autotension_left_arm.sh  autotension_right_arm.sh  cmake_install.cmake  get_key.cpp  gravitycal.cpp  manage_backups.cpp  utils.h  zerocal.cpp  zerocal_left_arm.sh  zerocal_right_arm.sh
sandbox/: CMakeCache.txt  Makefile  autohome.cpp  can_terminal  can_timing.cpp  cmake_install.cmake  constrain_to_path.cpp  cv_moves  ft_persistent_tare  full_system_test.cpp  gimbals_hand_controller  hand  hand_buttons_test.cpp  hand_self_preservation.cpp  inverse_dynamics_test.cpp  inverse_dynamics_test_teach_and_play.cpp  inverse_dynamics_test_teach_and_play_accel.cpp  joint_encoder_index_adjustments  joint_encoder_set_offsets  load_ft_cal  log_ft_data.cpp  log_hand_jp.cpp  log_hand_tact.cpp  log_sg_data.cpp  log_temp_data.cpp  mouse_follow.cpp  os_test  puck_terminal  read_pendant_state  robust_cartesian.h  safety_module  tactile_test  teach_with_hand.cpp  tensioner.h  voltage_control.cpp  wrist_teach_with_hand.cpp
sandbox/teach_and_play/: control_mode_switcher.h
src/: CMakeLists.txt  Makefile  cmake_install.cmake  libbarrett.so.1.2  libbarrett_socketcan_subdissector.lua  os.cpp  python.h
src/bus/: can_socket-linux.cpp  can_socket-rtcan.cpp
src/products/: hand.cpp  property_list.cpp
src/thread/: disable_secondary_mode_warning.cpp  real_time_mutex_impl-xenomai.cpp
tests/: CMakeLists.txt  Makefile  cmake_install.cmake
tests/log/: verify_file_contents.h
tests/math/: first_order_filter.cpp  spline.cpp
tests/systems/: exposed_io_system.h  pid_controller.cpp  rate_limiter.cpp
(+106 files in other folders)
